[package]
name = "sky_1"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18.1", default-features = false, features = ["3d", "dev"]}
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
bevy_flycam = "*"
bevy-fragment-shader-plugin = "0.1.1"

# Optimize the least for dev profiles to keep compile times down
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 1

[profile.release]
opt-level = 3
